dockerized frontend, refactor frontend to use vite